--- a/Views/Home/Gallery.cshtml
+++ b/Views/Home/Gallery.cshtml
@@ -5,24 +5,17 @@
     <hr/>
     <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 0"></button>
-            @for(int i = 1;i<Model.Length;i++)
+            @for(int i = 0;i<Model.Length;i++)
             {
-                <button  type="button" data-bs-target="#carousel" data-bs-slide-to=@i aria-label=$"Slide {@i}"></button>
+                string @cls = @i == 0 ? "active" : "";
+                <button class=@cls type="button" data-bs-target="#carousel" data-bs-slide-to=@i aria-label=$"Slide {@i}"></button>
             }
         </div>
-    
         <div class="carousel-inner bg-gray m-0 p-0">
-            <div class="carousel-item active">
-                <img src=@Model[0].Path class="d-block m-auto" style="height:70vh;">
-                <div class="carousel-caption d-none d-md-block ">
-                    <h5>@Model[0].Title</h5>
-                    <p>@Model[0].Description</p>
-                </div>
-            </div>
-            @for (int i = 1; i < Model.Length; i++)
+            @for (int i = 0; i < Model.Length; i++)
             {
-                <div class="carousel-item">
+                string @cls = @i == 0 ? "active" : "";
+                <div class="carousel-item @cls ">
                     <img src=@Model[@i].Path class="d-block m-auto" style="height:70vh;">
                     <div class="carousel-caption d-none d-md-block ">
                         <h5>@Model[@i].Title</h5>
@@ -31,7 +24,6 @@
                 </div>
             }
         </div>
-    
         <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
