--- a/Views/Home/Gallery.cshtml
+++ b/Views/Home/Gallery.cshtml
@@ -18,7 +18,7 @@
                 <div class="carousel-item @cls ">
                     <img src=@Model[@i].Path class="d-block m-auto" style="height:70vh;">
                     <div class="carousel-caption d-none d-md-block ">
-                        <h5>@Model[@i].Title</h5>
+                        <h5>"@Model[@i].Title"  @Model[@i].Year p.</h5>
                         <p>@Model[@i].Description</p>
                     </div>
                 </div>
